--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/book
+spring.datasource.url=jdbc:mysql://localhost:3306/book?autoReconnect=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
-server.port=8070
+
 
 spring.messages.basename = i18n/messages
 spring.devtools.restart.exclude=static/**,public/**,templates/**
 
-#server.port =${PORT:8080}
-#spring.datasource.url=${JDBC_DATABASE_URL}
-#spring.datasource.username=${JDBC_DATABASE_USERNAME}
-#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-#spring.jpa.show-sql=false
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=update
