--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.nw.spring</groupId>
-    <artifactId>nw-book-store</artifactId>
+    <artifactId>book-store</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>book-store</name>
     <description>Book Store</description>
